--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,16 @@ body {
   padding: 0;
 }
 
-.list-group,
-.searchInput {
+.list-group {
   margin-top: 3vw;
+}
+
+.navbar {
+  margin-bottom: 1.5vw;
+}
+
+.searchInput {
+  margin: 1.5vw 0;
 }
 
 .bookCard,
@@ -29,7 +36,8 @@ body {
 }
 
 .card-img {
-  height: 46vh;
+  height: 260px;
+  min-width: 130px;
 }
 
 .cart-title {
@@ -53,4 +61,9 @@ body {
 
 .btn-success {
   margin-top: 2vw;
+}
+
+.no-gutters > .col,
+.no-gutters > [class*="col-"] {
+  padding: 15px 0px 15px 15px !important;
 }
